# BoxAutoGPT

./: README.md  pyproject.toml  requirements.txt
BoxPlugin/: __init__.py  box.py  requirements.txt
src/box_plugin_autogpt/: __init__.py  box.py
