[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Box AutoGPT Plugin"
version = "0.0.2"
authors = [
  { name="Box DevRel", email="dx@box.com" },
]
description = "An Auto-GPT plugin that allows a user to get files from Box."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["abstract-singleton"]

[project.urls]
"Homepage" = "https://github.com/shurrey/BoxAutoGPT"
"Bug Tracker" = "https://github.com/shurrey/BoxAutoGPT"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = ""

[tool.isort]
profile = "black"

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "88"